use unified name as IDC Group

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <title>IDC Group</title>
     <meta
       name="description"
-      content="Intelligent Digital Creation Group (IDC Group) at Shanghai AI Laboratory"
+      content="Intelligent Digital Creation Group (IDC Group) @ Shanghai AI Laboratory"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
