Modify the page layout

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#FFF6EA" />
     <title>IDC Group</title>
     <meta
       name="description"
-      content="Intelligent Digital Creation Group (IDC Group) @ Shanghai AI Laboratory"
+      content="Intelligent Digital Creation Group (IDC Group) "
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
